migracion de montos a BigDecimal y correccion de dtos